# diskray

./: Cargo.toml  LICENSE  README.md  build.rs
src/: analyzer.rs  app.rs  lib.rs  main.rs  scanner.rs  utils.rs
src/ui/: chart_panel.rs  details_panel.rs  disks_panel.rs  main_panel.rs  mod.rs  tree_panel.rs
