[package]
name = "diskray"
version = "0.1.0"
edition = "2021"
description = "super fast disk scanner"
authors = ["VladislavPimenov"]
license = "MIT"
repository = "https://github.com/VladislavPimenov/diskray"
readme = "README.md"
keywords = ["disk", "analyzer", "gui", "storage", "visualization"]
categories = ["filesystem", "gui"]

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = "0.33.3"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.5"
rayon = "1.8"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
humansize = "2.1"
parking_lot = "0.12"
percent-encoding = "2.3"
lazy_static = "1.4"
regex = "1.10"
rfd = "0.12"
sysinfo = "0.30"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"

[build-dependencies]
winresource = "0.1"

[profile.release]
lto = true              
codegen-units = 1       
opt-level = "z"         
strip = true            
panic = "abort"